--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
         rel="stylesheet">
 
-    <title>Link Paradise</title>
+    <title>LinkTree Di Carvalho</title>
     <!--
 
 TemplateMo 548 Training Studio
@@ -53,14 +53,18 @@ https://templatemo.com/tm-548-training-studio
 
         <div class="video-overlay header-text">
             <div class="caption">
-                <div class="head__section">
-                    <img src="assets/images/logo.png" alt="">
-                </div>
-                
+                <h6>"TESTE"</h6>
+                <h2>Di<em>Carvalho</em></h2>
                 <div class="main-button scroll-to-section">
                     <a class="fa fa-youtube" href="http://www.youtube.com/c/HelcioCarvalho">   Lives no Youtube</a>
                 </div>
-                          <div class="main-button scroll-to-section">
+                <div class="main-button scroll-to-section">
+                    <a
+                        href="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=104984290-86a02c56-d892-421a-b0bd-bed61165c2b7">Cachê
+                        Virtual - Mercado Pago</a>
+                </div>
+
+                <div class="main-button scroll-to-section">
                     <a href="https://picpay.me/paradisecoldplay">Cachê Virtual - PicPay</a>
                 </div>
                 <h6>"Acoustic Sessions..."</h6>
