--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ https://templatemo.com/tm-548-training-studio
         <div class="video-overlay header-text">
             <div class="caption">
                 <h6>"TESTE"</h6>
-                <h2>Di<em>Carvalho</em></h2>
+                <h2>TESTE<em>TESTE</em></h2>
                 <div class="main-button scroll-to-section">
                     <a class="fa fa-youtube" href="http://www.youtube.com/c/HelcioCarvalho">   Lives no Youtube</a>
                 </div>
