--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ https://templatemo.com/tm-548-training-studio
 
         <div class="video-overlay header-text">
             <div class="caption">
-                <h6>"Música é vida..."</h6>
+                <h6>"BANDA PARADISE"</h6>
                 <h2>Di<em>Carvalho</em></h2>
                 <div class="main-button scroll-to-section">
                     <a class="fa fa-youtube" href="http://www.youtube.com/c/HelcioCarvalho">   Lives no Youtube</a>
