--- a/index.html
+++ b/index.html
@@ -2,94 +2,63 @@
 <html lang="en">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link
-        href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
-        rel="stylesheet">
-
-    <title>LinkTree Di Carvalho</title>
-    <!--
-
-TemplateMo 548 Training Studio
-
-https://templatemo.com/tm-548-training-studio
-
--->
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
-
-    <link rel="stylesheet" href="assets/css/templatemo-training-studio.css">
+    <meta charset="UTF-8">
+    <title>CodePen - LinkTree Clone</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js" integrity="sha512-SttpKhJqONuBVxbRcuH0wezjuX+BoFoli0yPsnrAADcHsQMW8rkR84ItFHGIkPvhnlRnE2FaifDOUw+EltbuHg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://kit.fontawesome.com/070428bd88.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
+    <!-- partial:index.partial.html -->
+    <div class="container">
+        <div class="head__section">
+            <img src="assets/images/logo.png" alt="">
+        </div>
 
-    <!-- ***** Preloader Start ***** -->
-    <div id="js-preloader" class="js-preloader">
-        <div class="preloader-inner">
-            <span class="dot"></span>
-            <div class="dots">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+        <div class="social__links">
+            <ul id="item">
+
+                <li class="whatsapp"><a href="http://api.whatsapp.com/send?1=pt_BR&phone=5516991047730">
+          <i class="fa fa-whatsapp"></i>
+          <span>
+            <h3>Whatsup</h3>
+            <p>Agende seu show com a gente.</p>
+          </span>
+        </a></li>
+
+
+                <li class="instagram"><a href="https://www.instagram.com/aparadiseoficial/">
+          <i class="fa fa-instagram"></i>
+          <span>
+            <h3>Instagram</h3>
+            <p>Siga para saber agenda, fotos e videos de shows e a rotina da banda.</p>
+          </span>
+        </a></li>
+
+
+                <li class="youtube"><a href="https://www.youtube.com/c/BandaParadise">
+          <i class="fa fa-youtube"></i>
+          <span>
+            <h3>Youtube</h3>
+            <p>Videos produzidos com qualidade.</p>
+          </span>
+        </a>
+                </li>
+                <li class="facebook"><a href="https://www.facebook.com/aparadiseoficial">
+          <i class="fa fa-facebook"></i>
+          <span>
+            <h3>Facebook</h3>
+            <p>Segunda rede social com a história da banda.</p>
+          </span>
+        </a></li>
+            </ul>
         </div>
     </div>
-    <!-- ***** Preloader End ***** -->
-
-
-
-    <!-- ***** Main Banner Area Start ***** -->
-    <div class="main-banner" id="top">
-        <video autoplay muted loop id="bg-video">
-            <source src="assets/images/FundoLinktree.mp4" type="video/mp4" />
-        </video>
-
-        <div class="video-overlay header-text">
-            <div class="caption">
-                <h6>"BANDA PARADISE"</h6>
-                <h2>Di<em>Carvalho</em></h2>
-                <div class="main-button scroll-to-section">
-                    <a class="fa fa-youtube" href="http://www.youtube.com/c/HelcioCarvalho">   Lives no Youtube</a>
-                </div>
-                <div class="main-button scroll-to-section">
-                    <a
-                        href="https://www.mercadopago.com.br/checkout/v1/redirect?pref_id=104984290-86a02c56-d892-421a-b0bd-bed61165c2b7">Cachê
-                        Virtual - Mercado Pago</a>
-                </div>
-
-                <div class="main-button scroll-to-section">
-                    <a href="https://picpay.me/paradisecoldplay">Cachê Virtual - PicPay</a>
-                </div>
-                <h6>"Acoustic Sessions..."</h6>
-            </div>
-        </div>
-    </div>
-    <!-- ***** Main Banner Area End ***** -->
-
-    <!-- jQuery -->
-    <script src="assets/js/jquery-2.1.0.min.js"></script>
-
-    <!-- Bootstrap -->
-    <script src="assets/js/popper.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!-- Plugins -->
-    <script src="assets/js/scrollreveal.min.js"></script>
-    <script src="assets/js/waypoints.min.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/imgfix.min.js"></script>
-    <script src="assets/js/mixitup.js"></script>
-    <script src="assets/js/accordions.js"></script>
-
-    <!-- Global Init -->
-    <script src="assets/js/custom.js"></script>
+    <!-- partial -->
+    <script src="./script.js"></script>
 
 </body>
 
